# chuck

./: .gitignore  Cargo.toml  README.md  ruff.toml
.github/workflows/: ci.yml  netsim.yml  netsim_integration.yml
chuck/src/: main.rs  service.rs
fixtures/: bulk_files_test_setup.sh  derp.config.toml  derp.direct.config.toml  direct_derp.cfg  direct_relay.cfg  dns.test.cfg  generate_files.sh  n_runs.sh  relay.cfg  relay.config.toml  relay.direct.config.toml  test.certificate.crt  test.certificate.private.key
netsim/: README.md  cleanup.sh  convert_metrics.py  convert_to_trace.py  flake.nix  link.py  main.py  netsim_parser.py  network.py  parser.py  process_sniff.py  pyproject.toml  reports_csv.py  setup.sh  sniff.py  util.py
netsim/.claude/: settings.local.json
netsim/net/: link.py  network.py
netsim/parsing/: netsim.py  reports.py
netsim/playbooks/: get.py  playbook_client.py  playbook_engine.py  requirements.txt  serve.py
netsim/report/: chuck_http__1_to_10__client.json  chuck_http__1_to_1__client.json  chuck_http__1_to_3__client.json  chuck_http__1_to_5__client.json  chuck_http__2_to_10__client.json  chuck_http__2_to_2__client.json  chuck_http__2_to_4__client.json  chuck_http__2_to_6__client.json  chuck_tls__1_to_10__client.json  chuck_tls__1_to_1__client.json  chuck_tls__1_to_3__client.json  chuck_tls__1_to_5__client.json  chuck_tls__2_to_10__client.json  chuck_tls__2_to_2__client.json  chuck_tls__2_to_4__client.json  chuck_tls__2_to_6__client.json  iperf__1_to_10__server.json  iperf__1_to_1__server.json  iperf__1_to_3__server.json  iperf__1_to_5__server.json  iperf__2_to_10__server.json  iperf__2_to_2__server.json  iperf__2_to_4__server.json  iperf__2_to_6__server.json  iperf_udp__1_to_10__server.json  iperf_udp__1_to_3__server.json  iperf_udp__1_to_5__server.json  iperf_udp__2_to_10__server.json  iperf_udp__2_to_2__server.json  iperf_udp__2_to_4__server.json  iperf_udp__2_to_6__server.json  iroh__1_to_1__client.json
netsim/scripts/: project_deps.sh  python_deps.sh  requirements.txt  ubuntu_deps.sh
netsim/sims/: chuck_https.json  example.json  iperf.json  iperf_udp.json  sendme.json  sendme_test.json
netsim/sims/example/: example.json  iroh_saturated.json  playbook.json  relay_direct.json  sendme.json
netsim/sims/integration/: adverse.json  derper.json  derper_direct.json  interface_switch.json  iroh.json  iroh_full.json  relay.json  relay_only.json
netsim/sims/integration_v2/: iroh.json  relay.json
netsim/sims/iroh/: iroh.json  iroh_10gb.json  iroh_200ms.json  iroh_20ms.json  iroh_many_files.json  iroh_relay_only.json
netsim/sims/iroh-compat/: iq10_v_iq11.json  iq11_v_iq10.json  iroh.json  iroh_mix.json  iroh_q10.json
netsim/sims/iroh_v2/: iroh.json  iroh_200ms.json  iroh_20ms.json
netsim/sims/lossy/: chuck_http.json  chuck_https.json  iperf.json  iperf_udp.json  iroh.json  iroh_train.json  sendme.json
netsim/sims/mini/: iroh.json
netsim/sims/repro/: iroh.json
netsim/sims/standard/: chuck_http.json  chuck_https.json  example.json  iperf.json  iperf_udp.json  iroh.json  sendme.json  sendme_test.json
netsim/sniffer/: process.py  sniff.py
src/: iroh.rs  lib.rs  main.rs  memesync.rs  service.rs
