[package]
name = "iroh-test"
version = "0.0.1"
edition = "2021"
authors = ["arqu <asmir@n0.computer>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh-test"
description = "iroh test tools"
rust-version = "1.65"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.0.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
tempfile = "3.3.0"
futures = "0.3.21"
bytes = "1.1.0"
rand = "0.8.5"

iroh-api = { git = "https://github.com/n0-computer/iroh", rev = "925b6f7614d7e37b1784e3f9bce039dbb2ce0bd4"}
iroh-util = { git = "https://github.com/n0-computer/iroh", rev = "925b6f7614d7e37b1784e3f9bce039dbb2ce0bd4"}
iroh-share = { git = "https://github.com/n0-computer/iroh", rev = "925b6f7614d7e37b1784e3f9bce039dbb2ce0bd4"}
iroh-one = { git = "https://github.com/n0-computer/iroh", rev = "925b6f7614d7e37b1784e3f9bce039dbb2ce0bd4"}
iroh-rpc-types = { git = "https://github.com/n0-computer/iroh", rev = "925b6f7614d7e37b1784e3f9bce039dbb2ce0bd4", default-features = false}
iroh-rpc-client = { git = "https://github.com/n0-computer/iroh", rev = "925b6f7614d7e37b1784e3f9bce039dbb2ce0bd4", default-features = false}