[package]
name = "chuck"
version = "0.0.1"
edition = "2021"
authors = ["arqu <asmir@n0.computer>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/chuck"
description = "iroh test tools"
rust-version = "1.65"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.0.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
tempfile = "3.3.0"
futures = "0.3.21"
bytes = "1.1.0"
rand = "0.8.5"

iroh-api = { git = "https://github.com/n0-computer/iroh", rev = "f4ba4cd7fc239f97ac06dfba3c3ba819b97c0ca2"}
iroh-util = { git = "https://github.com/n0-computer/iroh", rev = "f4ba4cd7fc239f97ac06dfba3c3ba819b97c0ca2"}
iroh-share = { git = "https://github.com/n0-computer/iroh", rev = "f4ba4cd7fc239f97ac06dfba3c3ba819b97c0ca2"}
iroh-one = { git = "https://github.com/n0-computer/iroh", rev = "f4ba4cd7fc239f97ac06dfba3c3ba819b97c0ca2"}
iroh-rpc-types = { git = "https://github.com/n0-computer/iroh", rev = "f4ba4cd7fc239f97ac06dfba3c3ba819b97c0ca2", default-features = false}
iroh-rpc-client = { git = "https://github.com/n0-computer/iroh", rev = "f4ba4cd7fc239f97ac06dfba3c3ba819b97c0ca2", default-features = false}